--- a/index.html
+++ b/index.html
@@ -40,22 +40,22 @@
             <nav class="nav">
                 <ul class="navigation">
                     <li class="navigation__item navigation__item01">
-                        <a href="" class="navigation__link">Products</a>
+                        <a href="#products" class="navigation__link">Products</a>
                     </li>
                     <li class="navigation__item">
-                        <a href="" class="navigation__link">Features</a>
+                        <a href="#about" class="navigation__link">About</a>
                     </li>
                     <li class="navigation__item">
-                        <a href="" class="navigation__link">About</a>
+                        <a href="#calc" class="navigation__link">Features</a>
                     </li>
                     <li class="navigation__item">
-                        <a href="" class="navigation__link">Contact</a>
+                        <a href="#contact" class="navigation__link">Contact</a>
                     </li>
                     <li class="navigation__item navigation__item-login">
-                        <a href="" class="navigation__link navigation__link-login">Login</a>
+                        <a href="#" class="navigation__link navigation__link-login">Login</a>
                     </li>
                     <li class="navigation__item navigation__item-register btn">
-                        <a href="" class="navigation__link navigation__link-register btn">Register</a>
+                        <a href="#" class="navigation__link navigation__link-register btn">Register</a>
                     </li>
                 </ul>
                 <!-- /ul.navigation -->
@@ -65,7 +65,7 @@
         <!-- /wrapper -->
     </header>
 
-    <section class="section-hero">
+    <section class="section-hero" id="products">
         <div class="wrapper">
             <div class="section-hero__row">
                 <div class="section-hero__info">
@@ -93,7 +93,7 @@
     </section>
     <!-- /.section.section-hero -->
 
-    <section class="section section-why">
+    <section class="section section-why" id="about">
         <div class="wrapper">
             <div class="section-why__row">
                 <div class="section-why__item">
@@ -139,7 +139,7 @@
     </section>
     <!-- /section.section-why -->
 
-    <section class="section section-trade">
+    <section class="section section-trade" id="calc">
         <div class="wrapper">
             <div class="section-trade__top">
                 <div class="section-trade__text-block">
@@ -215,7 +215,7 @@
     </section>
     <!-- /section.section-trade -->
 
-    <section class="section section-form">
+    <section class="section section-form" id="contact">
         <div class="wrapper">
             <div class="section-form__form">
                 <div class="section-form__form-text">
@@ -255,6 +255,7 @@
     <!-- /footer.footer -->
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
